--- a/examples/获取并复制选择的文本/3-选择并获取表单域元素的内容.html
+++ b/examples/获取并复制选择的文本/3-选择并获取表单域元素的内容.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>选择并获取表单域元素的内容</title>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../../bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
 <div>
