--- a/examples/获取并复制选择的文本/4-根据选择索引获取选择的文本.html
+++ b/examples/获取并复制选择的文本/4-根据选择索引获取选择的文本.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>根据选择索引获取选择的文本</title>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../../bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
 <textarea id="myTextArea" cols="30" rows="10">
