--- a/examples/复制和移动一个dom元素.html
+++ b/examples/复制和移动一个dom元素.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <style>
-        #container{
+        #container {
             width: 1000px;
             height: 100px;
             border: 1px solid #555;
@@ -15,16 +15,18 @@
 </head>
 <body>
 <p class="para">jquery</p>
+
 <p class="para-ng">angular</p>
+
 <div id="container"></div>
 <button id="moveJqPara">移动jquery段落</button>
 <button id="moveNgPara">移动angular段落</button>
 <script>
-    $(function() {
+    $(function () {
 
-        $('#moveNgPara').on('click', function() {
+        $('#moveNgPara').on('click', function () {
             var self = this;
-            var $ngPara = $('body > .para-ng')
+            var $ngPara = $('body > .para-ng');
             var ngParaText = $ngPara.text();
             $ngPara
                     .clone()
@@ -33,7 +35,7 @@
                     .text($('.para-ng', '#container').length + '、' + ngParaText);
         });
 
-        $('#moveJqPara').on('click', function() {
+        $('#moveJqPara').on('click', function () {
             $('.para')
                     .on('click', paraClick)
                     .detach()
