--- a/examples/将json数据渲染到option并添加到select.html
+++ b/examples/将json数据渲染到option并添加到select.html
@@ -24,7 +24,7 @@
 </select>
 <script>
 
-    $(function() {
+    $(function () {
 
         //不用插件
         var data = {
@@ -55,7 +55,7 @@
 
         render(data);
         function render(data) {
-            $.each(data, function(key, value) {
+            $.each(data, function (key, value) {
                 createOption(key, value).appendTo('#mySelect1');
             });
         }
@@ -69,7 +69,7 @@
 
         renderArrayObjData(data2);
         function renderArrayObjData(data) {
-            $.each(data, function(index, option) {
+            $.each(data, function (index, option) {
                 createOption(option.key, option.value).appendTo('#mySelect2');
             });
         }
@@ -79,7 +79,7 @@
 
         $('#mySelect3, #mySelect4').addOption({
             data: data,
-            onSelect: function(val, key) {
+            onSelect: function (val, key) {
                 console.log(val, key);
             }
         }).css('width', '100px');
@@ -90,13 +90,14 @@
 <script>
     //搞成jquery插件
 
-    ;(function($) {
+    ;
+    (function ($) {
 
-        $.fn.addOption = function(options) {
+        $.fn.addOption = function (options) {
 
             this.change(change);
 
-            this.each(function() {
+            this.each(function () {
 
                 var $selectEl = $(this);
 
@@ -108,19 +109,19 @@
                 var val = $(this).val();
                 var key = $(this).children(':selected').text();
 
-                if($.isFunction(options.onSelect)) {
+                if ($.isFunction(options.onSelect)) {
                     options.onSelect.call(this, val, key);
                 }
 
             }
 
             function render(data, $selectEl) {
-                if($.isArray(data)) {
-                    $.each(data, function(index, option) {
+                if ($.isArray(data)) {
+                    $.each(data, function (index, option) {
                         createOption(option.key, option.value).appendTo($selectEl);
                     });
-                } else if($.isPlainObject(data)) {
-                    $.each(data, function(key, value) {
+                } else if ($.isPlainObject(data)) {
+                    $.each(data, function (key, value) {
                         createOption(key, value).appendTo($selectEl);
                     });
                 }
@@ -134,7 +135,6 @@
             }
 
 
-
             //优化方法
             function render2(data, $selectEl) {
                 createOptions(data).appendTo($selectEl);
@@ -142,8 +142,8 @@
 
             function createOptions(data) {
                 var options = '', v, k;
-                $.each(data, function(a, b) {
-                    if($.isPlainObject(b)) {
+                $.each(data, function (a, b) {
+                    if ($.isPlainObject(b)) {
                         v = b.value;
                         k = b.key;
                     } else {
