--- a/examples/获取并复制选择的文本/1-获取用户选择的文本.html
+++ b/examples/获取并复制选择的文本/1-获取用户选择的文本.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../../bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
 <div>
     <textarea name="selectArea" id="selectArea" cols="30" rows="10"></textarea>
+
     <p>选择我，复制我</p>
 </div>
 <script>
-    $(function() {
+    $(function () {
 
         //获取用户选择的文本
         function getSelectText() {
             var selectText = "";
-            if(window.getSelection) {
+            if (window.getSelection) {
                 console.log(window.getSelection());
                 selectText = window.getSelection().toString();
             }
@@ -28,7 +29,7 @@
 
         function docMouseUpHandler(e) {
             var text = getSelectText();
-            if(text.length > 0) {
+            if (text.length > 0) {
                 $('#selectArea').val(text);
             }
         }
