--- a/examples/获取并复制选择的文本/5-将表单域元素选择的文本复制到剪切板.html
+++ b/examples/获取并复制选择的文本/5-将表单域元素选择的文本复制到剪切板.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>将表单域元素选择的文本复制到剪切板</title>
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../../bower_components/jquery/dist/jquery.js"></script>
 </head>
 <body>
 
 <script>
-    $(function() {
-        function copySelectionText(){
-            var copysuccess // var to check whether execCommand successfully executed
-            try{
-                copysuccess = document.execCommand("copy") // run command to copy selected text to clipboard
-            } catch(e){
+    $(function () {
+        function copySelectionText() {
+            var copysuccess; // var to check whether execCommand successfully executed
+            try {
+                copysuccess = document.execCommand("copy"); // run command to copy selected text to clipboard
+            } catch (e) {
                 copysuccess = false
             }
             return copysuccess
