--- a/plugins/图片放大镜/index.html
+++ b/plugins/图片放大镜/index.html
@@ -37,14 +37,14 @@
 <body>
 <div id="j-img-ct" class="g-img-ct">
     <div class="m-img-box">
-        <img src="./img.jpg"/>
+        <img src="http://7xp9vw.com1.z0.glb.clouddn.com/image%2F1.jpg"/>
     </div>
 </div>
 <script>
     $(function () {
         $('#j-img-ct').imgZoom({
             zoom: 2,
-            url: './img.jpg'
+            url: 'http://7xp9vw.com1.z0.glb.clouddn.com/image%2F1.jpg'
         });
     });
 </script>
