--- a/examples/window.onerror全局错误捕获/index.html
+++ b/examples/window.onerror全局错误捕获/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <!-- <img src="image.gif" /> -->
+  <img src="image.gif" />
   <script>
     window.onerror = function (message, source, lineno, colno, error) {
       console.group('-- Error catched --')
@@ -22,6 +22,7 @@
       console.log("错误详情：", error);
       console.groupEnd('-- Error catched --')
     }
+
   </script>
   <script>
     window.onload = function () {
