--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,7 @@
 <body>
   <ul>
     <li><a href="./调用摄像头.html">调用摄像头</a></li>
+    <li><a href="./postMessage">postMessage</a></li>
   </ul>
 </body>
 </html>
