--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
     <li><a href="./调用摄像头.html">调用摄像头</a></li>
     <li><a href="./postMessage">postMessage</a></li>
     <li><a href="./在h5中劫持浏览器返回和物理返回逻辑/index.html">在h5中劫持浏览器返回和物理返回逻辑</a></li>
+    <li><a href="./beforeunload">beforeunload</a></li>
   </ul>
 </body>
 </html>
