--- a/examples/在h5中劫持浏览器返回和物理返回逻辑/demo-2/a.html
+++ b/examples/在h5中劫持浏览器返回和物理返回逻辑/demo-2/a.html
@@ -15,20 +15,32 @@
       setTimeout(cb, 0);
     }
     window.onload = function () {
-      const hash = 'noBack'
-      window.location.hash = '';
-      nextTick(function () {
-        window.location.hash = hash;
-      });
-      window.addEventListener('hashchange', function (evt) {
-        console.log(evt);
-        const newURL = evt.newURL;
-        const oldURL = evt.oldURL;
+      const search = window.location.search;
+      const searchObj = search.slice(1).split('&').reduce((pre, cur, idx) => {
+        const pairs = cur.split('=');
+        pre[pairs[0]] = pairs[1];
+        return pre;
+      }, {});
 
-        if (newURL.indexOf(hash) === -1 && oldURL.indexOf(hash) !== -1) {
-          window.location.replace('./b.html');
-        }
-      }, false);
+      if (!searchObj.returnUrl) {
+        const hash = 'noBack';
+        window.location.hash = '';
+        nextTick(function () {
+          window.location.hash = hash;
+        });
+
+        window.addEventListener('hashchange', function (evt) {
+          console.log(evt);
+          const newURL = evt.newURL;
+          const oldURL = evt.oldURL;
+
+          if (newURL.indexOf(hash) === -1 && oldURL.indexOf(hash) !== -1) {
+            return window.location.replace('./b.html');
+          }
+        }, false);
+      }
+
+
     };
   </script>
 </body>
