--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,8 @@
     <li><a href="./在h5中劫持浏览器返回和物理返回逻辑/demo-1/index.html">多页面 - 通过pushstate和popstate</a></li>
     <li><a href="./在h5中劫持浏览器返回和物理返回逻辑/demo-2/index.html">多页面 - 通过hashchange</a></li>
     <li><a href="./beforeunload">beforeunload</a></li>
+    <li><a href="./出现undefined请求的案例">出现undefined请求的案例</a></li>
+    <li><a href="./记录页面滚动位置">记录页面滚动位置</a></li>
   </ul>
 </body>
 </html>
