添加记录页面滚动位置的一个例子

--- a/examples/记录页面滚动位置/demo-3/a.html
+++ b/examples/记录页面滚动位置/demo-3/a.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>app-1</title>
+  <title>a</title>
   <style>
     * {
       margin: 0;
@@ -37,10 +37,8 @@
     <li>5</li>
     <li>6</li>
     <li>7</li>
-    <li>
-      <a href="//10.0.77.200:2224/%E8%AE%B0%E5%BD%95%E9%A1%B5%E9%9D%A2%E6%BB%9A%E5%8A%A8%E4%BD%8D%E7%BD%AE/demo-2/app-2/index.html">app-2 index</a>
-    </li>
-    <li><a href="//github.com">github</a></li>
+    <li>8</li>
+    <li>9</li>
     <li>10</li>
   </ul>
 </body>
