--- a/examples/记录页面滚动位置/index.html
+++ b/examples/记录页面滚动位置/index.html
@@ -10,6 +10,7 @@
   <ul>
     <li><a href="./demo-1">一个应用中的多页面静态页面</a></li>
     <li><a href="./demo-2">多个应用之间的多页面静态页面</a></li>
+    <li><a href="./demo-3">一个应用中的多页面动态页面</a></li>
   </ul>
 </body>
 </html>
