添加点击图片指定区域（自适应）触发事件的例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
     <li><a href="./beforeunload">beforeunload</a></li>
     <li><a href="./出现undefined请求的案例">出现undefined请求的案例</a></li>
     <li><a href="./记录页面滚动位置">记录页面滚动位置</a></li>
+    <li><a href="./area-tag.html">点击图片特定区域触发事件</a></li>
   </ul>
 </body>
 </html>
