添加“只让input控件输入数字”的例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,6 +16,7 @@
     <li><a href="./出现undefined请求的案例">出现undefined请求的案例</a></li>
     <li><a href="./记录页面滚动位置">记录页面滚动位置</a></li>
     <li><a href="./area-tag.html">点击图片特定区域触发事件</a></li>
+    <li><a href="./只让input控件输入数字.html">只让input控件输入数字</a></li>
   </ul>
 </body>
 </html>
