--- a/examples/index.html
+++ b/examples/index.html
@@ -17,6 +17,7 @@
     <li><a href="./记录页面滚动位置">记录页面滚动位置</a></li>
     <li><a href="./area-tag.html">点击图片特定区域触发事件</a></li>
     <li><a href="./只让input控件输入数字.html">只让input控件输入数字</a></li>
+    <li><a href="./google-translate">google翻译组件测试</a></li>
   </ul>
 </body>
 </html>
