添加一个例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,7 @@
     <li><a href="./area-tag.html">点击图片特定区域触发事件</a></li>
     <li><a href="./只让input控件输入数字.html">只让input控件输入数字</a></li>
     <li><a href="./google-translate">google翻译组件测试</a></li>
+    <li><a href="./iscroll在微信滚动卡顿的问题/index.html">iscroll在微信滚动卡顿的问题</a></li>
   </ul>
 </body>
 </html>
