--- a/examples/记录页面滚动位置/index.html
+++ b/examples/记录页面滚动位置/index.html
@@ -11,6 +11,8 @@
     <li><a href="./demo-1">一个应用中的多页面静态页面</a></li>
     <li><a href="./demo-2">多个应用之间的多页面静态页面</a></li>
     <li><a href="./demo-3">一个应用中的多页面动态页面</a></li>
+    <li><a href="./demo-4">多个应用动、静态页面 - 指定a标签的target属性</a></li>
+    <li><a href="./demo-5">一个应用中得多页面动态页面 - 指定a标签的target属性</a></li>
   </ul>
 </body>
 </html>
