--- a/examples/index.html
+++ b/examples/index.html
@@ -19,6 +19,8 @@
     <li><a href="./只让input控件输入数字.html">只让input控件输入数字</a></li>
     <li><a href="./google-translate">google翻译组件测试</a></li>
     <li><a href="./iscroll在微信滚动卡顿的问题/index.html">iscroll在微信滚动卡顿的问题</a></li>
+    <li><a href="./测试微信应用间跳转问题">测试微信应用间跳转问题</a></li>
   </ul>
+
 </body>
 </html>
