--- a/examples/index.html
+++ b/examples/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
   <ul>
-    <li><a href="./调用摄像头.html">调用摄像头</a></li>
-    <li><a href="./postMessage">postMessage</a></li>
-    <li><a href="./h5CatchBackButton/demo-1/index.html">多页面 - 通过pushstate和popstate</a></li>
-    <li><a href="./h5CatchBackButton/demo-2/index.html">多页面 - 通过hashchange</a></li>
-    <li><a href="./beforeunload">beforeunload</a></li>
-    <li><a href="./出现undefined请求的案例">出现undefined请求的案例</a></li>
-    <li><a href="./记录页面滚动位置">记录页面滚动位置</a></li>
-    <li><a href="./area-tag.html">点击图片特定区域触发事件</a></li>
-    <li><a href="./只让input控件输入数字.html">只让input控件输入数字</a></li>
-    <li><a href="./google-translate">google翻译组件测试</a></li>
-    <li><a href="./iscroll在微信滚动卡顿的问题/index.html">iscroll在微信滚动卡顿的问题</a></li>
-    <li><a href="./测试微信应用间跳转问题">测试微信应用间跳转问题</a></li>
+    <li>
+      <a href="./调用摄像头.html">调用摄像头</a>
+    </li>
+    <li>
+      <a href="./postMessage">postMessage</a>
+    </li>
+    <li>
+      <a href="./h5CatchBackButton/demo-1/index.html">多页面 - 通过pushstate和popstate</a>
+    </li>
+    <li>
+      <a href="./h5CatchBackButton/demo-2/index.html">多页面 - 通过hashchange</a>
+    </li>
+    <li>
+      <a href="./beforeunload">beforeunload</a>
+    </li>
+    <li>
+      <a href="./出现undefined请求的案例">出现undefined请求的案例</a>
+    </li>
+    <li>
+      <a href="./记录页面滚动位置">记录页面滚动位置</a>
+    </li>
+    <li>
+      <a href="./area-tag.html">点击图片特定区域触发事件</a>
+    </li>
+    <li>
+      <a href="./只让input控件输入数字.html">只让input控件输入数字</a>
+    </li>
+    <li>
+      <a href="./google-translate">google翻译组件测试</a>
+    </li>
+    <li>
+      <a href="./iscroll在微信滚动卡顿的问题/index.html">iscroll在微信滚动卡顿的问题</a>
+    </li>
+    <li>
+      <a href="./测试微信应用间跳转问题">测试微信应用间跳转问题</a>
+    </li>
+    <li>
+      <a href="./user-scalable在ios下失效的问题">user-scalable在ios下失效的问题</a>
+    </li>
   </ul>
 
 </body>
+
 </html>
