添加两个例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -49,6 +49,12 @@
     <li>
       <a href="./user-scalable在ios下失效的问题">user-scalable在ios下失效的问题</a>
     </li>
+    <li>
+      <a href="./图片置灰">图片置灰</a>
+    </li>
+    <li>
+      <a href="./setSelectionRange在Input是number类型时会报错">setSelectionRange在Input是number类型时会报错</a>
+    </li>
   </ul>
 
 </body>
