添加一个滚动置顶tab的例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -55,6 +55,9 @@
     <li>
       <a href="./setSelectionRange在Input是number类型时会报错">setSelectionRange在Input是number类型时会报错</a>
     </li>
+    <li>
+      <a href="./滚动切换tab">滚动切换tab</a>
+    </li>
   </ul>
 
 </body>
