--- a/examples/滚动切换tab/index.html
+++ b/examples/滚动切换tab/index.html
@@ -121,7 +121,7 @@
         <li data-id='mobile' class="tab-item">
           <a>手机</a>
         </li>
-        <li data-id='3c' class="tab-item">
+        <li data-id='digit' class="tab-item">
           <a>数码3C</a>
         </li>
         <li data-id='electric' class="tab-item">
@@ -132,26 +132,18 @@
         </li>
       </ul>
     </aside>
-    <aside class="aside-fixed">
-      <!-- <ul class="tab-list">
-        <li data-id='mobile' class="tab-item">
-          <a>手机</a>
-        </li>
-        <li data-id='3c' class="tab-item">
-          <a>数码3C</a>
-        </li>
-        <li data-id='electric' class="tab-item">
-          <a>家用电器</a>
-        </li>
-        <li data-id='book' class="tab-item">
-          <a>图书影音</a>
-        </li>
-      </ul> -->
-    </aside>
+    <aside class="aside-fixed"></aside>
 
     <article class="content">
-      <section class="section">
-        <h2 id='mobile' class="section-title">手机</h2>
+      <section id='mobile' class="section">
+        <h2 class="section-title">手机</h2>
+        <ul class='data-list'>
+          <li class="data-item">iPhoneX</li>
+          <li class="data-item">iPhone8P</li>
+        </ul>
+      </section>
+      <section id='digit' class="section">
+        <h2 class="section-title">数码3C</h2>
         <ul class='data-list'>
           <li class="data-item">iPhoneX</li>
           <li class="data-item">iPhone8P</li>
@@ -160,8 +152,22 @@
           <li class="data-item">iPhone7</li>
         </ul>
       </section>
-      <section class="section">
-        <h2 class="section-title">数码3C</h2>
+      <section id='electric' class="section">
+        <h2 class="section-title">家用电器</h2>
+        <ul class='data-list'>
+          <li class="data-item">iPhoneX</li>
+          <li class="data-item">iPhone8P</li>
+          <li class="data-item">iPhone8</li>
+          <li class="data-item">iPhone7P</li>
+          <li class="data-item">iPhone7</li>
+          <li class="data-item">小米mix2</li>
+          <li class="data-item">小米7</li>
+          <li class="data-item">小米8</li>
+          <li class="data-item">小米9</li>
+        </ul>
+      </section>
+      <section id='book' class="section">
+        <h2 class="section-title">图书影音</h2>
         <ul class='data-list'>
           <li class="data-item">iPhoneX</li>
           <li class="data-item">iPhone8P</li>
