添加横屏滚动切换tab加载数据例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -58,6 +58,9 @@
     <li>
       <a href="./滚动切换tab">滚动切换tab</a>
     </li>
+    <li>
+      <a href="./横屏滚动切换tab加载数据">横屏滚动切换tab加载数据</a>
+    </li>
   </ul>
 
 </body>
