添加跑马灯+抽奖的例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -61,6 +61,9 @@
     <li>
       <a href="./横屏滚动切换tab加载数据">横屏滚动切换tab加载数据</a>
     </li>
+    <li>
+      <a href="./跑马灯+抽奖">跑马灯+抽奖</a>
+    </li>
   </ul>
 
 </body>
