完善抽奖-指哪打哪

--- a/examples/跑马灯+抽奖/index.html
+++ b/examples/跑马灯+抽奖/index.html
@@ -36,8 +36,14 @@
 
 <body>
   <ul class='light-list'></ul>
-  <button id='start' type='button'>start</button>
-  <button id='stop' type='button'>stop</button>
+  <form id='form'>
+    <div>
+      <input type="text" placeholder="输入中奖的数字" />
+    </div>
+    <button id='start' type='submit'>start</button>
+    <button id='stop' type='button'>stop</button>
+  </form>
+
   <script src="./index.js"></script>
 </body>
 
