添加几个例子

--- a/examples/index.html
+++ b/examples/index.html
@@ -64,6 +64,18 @@
     <li>
       <a href="./跑马灯+抽奖">跑马灯+抽奖</a>
     </li>
+    <li>
+      <a href="./swift和js互调">swift和js互调</a>
+    </li>
+    <li>
+      <a href="./input中文非直接输入">input中文非直接输入</a>
+    </li>
+    <li>
+      <a href="./select-event">select-event</a>
+    </li>
+    <li>
+      <a href="./zoom">zoom</a>
+    </li>
   </ul>
 
 </body>
