add clickjacking demo

--- a/examples/index.html
+++ b/examples/index.html
@@ -79,6 +79,9 @@
     <li>
       <a href="./xss">xss攻击实例</a>
     </li>
+    <li>
+      <a href="./clickjacking">点击劫持</a>
+    </li>
   </ul>
 
 </body>
